<resources>
    <string name="app_name">player</string>
    <string name="device_list">设备列表</string>
    <string name="common_ip_port_address">ip地址</string>
    <string name="common_sure">确定</string>
    <string name="common_user_name">用户名</string>
    <string name="common_user_password">密码</string>
    <string name="common_verification_code">验证码</string>
    <string name="common_login">登录</string>
    <string name="please_input_ip">请填写ip地址，如果有端口，请以英文":"分割</string>
    <string name="please_confirm_ip_address">请确定IP地址</string>
    <string name="please_input_user_name">请填写用户名</string>
    <string name="please_input_user_password">请输入密码</string>
    <string name="please_input_verification">请输入验证码</string>
    <string name="common_data_error">%s-获取数据有问题,请检查接口返回数据</string>
    <string name="common_login_success">登录成功</string>
    <string name="common_play">播放</string>
    <string name="common_pause">暂停</string>
    <string name="common_stop">停止</string>
    <string name="common_voice">声音</string>
    <string name="common_default">默认的rtsp</string>
    <string name="common_snap">抓拍</string>
    <string name="common_video">录像</string>
    <string name="common_video_end">结束录像</string>
    <string name="common_single_screen">单屏</string>
    <string name="common_mulit_screen">四分屏</string>
    <string name="common_history_list">录像回放筛选</string>
    <string name="common_not_select_device">当前未选中设备</string>
    <string name="common_select_device">你当前选择的设备是%s,是否确定</string>
    <string name="record_video">录像回放</string>
    <string name="please_input_device_id">请输入设备的id</string>
    <string name="record_search">查询</string>
    <string name="record_please_input_start_time">请选择开始时间</string>
    <string name="record_please_input_end_time">请选择结束时间</string>
    <string name="attendance_statistics_week_monday">星期一</string>
    <string name="attendance_statistics_week_tuesday">星期二</string>
    <string name="attendance_statistics_week_wednesday">星期三</string>
    <string name="attendance_statistics_week_thursday">星期四</string>
    <string name="attendance_statistics_week_friday">星期五</string>
    <string name="attendance_statistics_week_saturday">星期六</string>
    <string name="attendance_statistics_week_sunday">星期日</string>
    <string name="common_layout_error" translatable="false">布局异常</string>
    <string name="please_select_video_device">当前未检测到你选中的镜头，请选择一个镜头播放。</string>
    <string name="please_stop_video">请停止播放，实时浏览不支持暂停。</string>
    <string name="common_platform">平台</string>
    <string name="common_local">本地</string>
    <string name="please_select_platform_or_local">请选择本地或者平台抓拍</string>
    <string name="please_stop_record">当前正在录像，请先停止录像,再进行操作</string>
    <string name="please_play_video_first">当前视图未播放视频，请先播放视频</string>
    <string name="local_snap_success">本地抓拍成功，请前往%s查看</string>
    <string name="platform_snap_success">平台抓拍成功</string>
    <string name="platform_snap_error">平台抓拍失败</string>
    <string name="record_success">录像成功,请前往%s查看</string>
    <string name="record_error">录像失败</string>
</resources>