<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_200"
    android:background="@drawable/shape_bg_white_radius_5">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_platform"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/bg_color"
        android:gravity="center"
        android:text="@string/common_platform"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_split"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_platform"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_local"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/bg_color"
        android:gravity="center"
        android:text="@string/common_local"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/view_split"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_split_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_local"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_sure_bg"
        android:gravity="center"
        android:text="@string/common_sure"
        android:textColor="@color/color92C1FF"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_split_1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_cancel_bg"
        android:gravity="center"
        android:text="@string/common_cancel"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sure"
        app:layout_constraintTop_toBottomOf="@+id/view_split_1"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>